force-app/main/default/objects/WarehouseTransferRequest__c/WarehouseTransferRequest__c.object-meta.xml
<CustomObject>
    <label>倉庫間移動</label>
    <nameField>
        <displayFormat>WTR-{00000000}</displayFormat>
        <label>倉庫間移動#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>