force-app/main/default/objects/WarehouseTransferRequest__c/fields/ArrivalDeadline__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDeadline__c</fullName>
    <label>入庫期日</label>
    <type>Date</type>
</CustomField>