force-app/main/default/objects/WarehouseTransferRequest__c/fields/ArrivalWarehouse__c.field-meta.xml
<CustomField>
    <fullName>ArrivalWarehouse__c</fullName>
    <label>入庫倉庫</label>
    <length>255</length>
    <type>Text</type>
</CustomField>