force-app/main/default/objects/WarehouseTransferRequest__c/fields/DriverMaster__c.field-meta.xml
<CustomField>
    <fullName>DriverMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ドライバー</label>
    <referenceTo>DriverMaster__c</referenceTo>
    <relationshipLabel>倉庫間移動</relationshipLabel>
    <relationshipName>WarehouseTransferRequestList</relationshipName>
    <type>Lookup</type>
</CustomField>