force-app/main/default/objects/WarehouseTransferRequest__c/fields/ShippingWarehouse__c.field-meta.xml
<CustomField>
    <fullName>ShippingWarehouse__c</fullName>
    <label>出庫倉庫</label>
    <length>255</length>
    <type>Text</type>
</CustomField>