force-app/main/default/objects/WarehouseTransferRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>計画中</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <label>依頼済み</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>完了</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>