force-app/main/default/objects/WarehouseTransferRequest__c/fields/TemporaryRequest__c.field-meta.xml
<CustomField>
    <fullName>TemporaryRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>入庫情報が不要な場合はチェックします</inlineHelpText>
    <label>一時的な移動</label>
    <type>Checkbox</type>
</CustomField>