force-app/main/default/objects/WarehouseTransferRequest__c/fields/VehicleMaster__c.field-meta.xml
<CustomField>
    <fullName>VehicleMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>自社車両</label>
    <referenceTo>VehicleMaster__c</referenceTo>
    <relationshipLabel>倉庫間移動</relationshipLabel>
    <relationshipName>WarehouseTransferRequestList</relationshipName>
    <type>Lookup</type>
</CustomField>