force-app/main/default/objects/WarehouseTransferRequest__c/validationRules/TemporaryRequest_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>TemporaryRequest_Check</fullName>
    <active>true</active>
    <description>『一時的な移動』が未チェックのため、ステータスを変更できません。
(計画中→依頼済み,計画中→完了,依頼済み→完了)</description>
    <errorConditionFormula>AND(
    NOT(TemporaryRequest__c), 
    ISCHANGED(Status__c) ,
    (ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;) || ISPICKVAL(PRIORVALUE(Status__c), &quot;Order&quot;) ),
    (ISPICKVAL(Status__c, &quot;Order&quot;) || ISPICKVAL(Status__c, &quot;Completed&quot;))
)</errorConditionFormula>
    <errorDisplayField>TemporaryRequest__c</errorDisplayField>
    <errorMessage>『一時的な移動』が未チェックのため、ステータスを変更できません。</errorMessage>
</ValidationRule>