force-app/main/default/objects/WarehouseTransferRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>DriverMaster__c</columns>
    <columns>VehicleMaster__c</columns>
    <columns>ShippingWarehouse__c</columns>
    <columns>ArrivalWarehouse__c</columns>
    <columns>ArrivalDeadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>